# godot-rust-wsl

./: README.md
game/: Cargo.toml
game/src/: lib.rs
godot/: game.gdextension  icon.svg.import  project.godot  sprite_2d.tscn
