[package]
name = "game"     # Appears in the filename of the compiled dynamic library.
version = "0.1.0" # You can leave version and edition as-is for now.
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }


[dev-dependencies]
cargo-cmd = "0.3.1"
cargo-watch = "8.5.2"
cross = "0.2.5"

[package.metadata.commands]
dev = "cargo watch -c -w src -s cross build --target=x86_64-pc-windows-gnu --release"
